# boardgame-labeler

./: .gitignore  README.md  bgg_labeler.py  gui.py  main.py  main.spec  pyproject.toml  requirements.txt
scripts/: pyinstaller-win.bat  pyinstaller.py  pyinstaller.sh
